--- a/fixtures/TEST.html
+++ b/fixtures/TEST.html
@@ -10,6 +10,7 @@
         >
       </li>
       <li><a href="https://wgalyen.show/10/">Mechanika Design</a></li>
+      <li><a href="20/">Mechanika Design</a></li>
     </ul>
   </body>
 </html>
