example.com -> example.org

--- a/fixtures/TEST_HTML5_CUSTOM_ELEMENTS.html
+++ b/fixtures/TEST_HTML5_CUSTOM_ELEMENTS.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 <body>
-  <some-weird-element href="https://example.com/some-weird-element"></some-weird-element>
-  <even-weirder fake-attr src="https://example.com/even-weirder-src" href="https://example.com/even-weirder-href"></even-weirder>
-  <citations cite="https://example.com/citations"></citations>
+  <some-weird-element href="https://example.org/some-weird-element"></some-weird-element>
+  <even-weirder fake-attr src="https://example.org/even-weirder-src" href="https://example.org/even-weirder-href"></even-weirder>
+  <citations cite="https://example.org/citations"></citations>
 </body>
 </html>
