--- a/fixtures/TEST_HTML5_LOWERCASE_DOCTYPE.html
+++ b/fixtures/TEST_HTML5_LOWERCASE_DOCTYPE.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-  <a href="https://example.com/body/a">Link in body</a>
+  <a href="https://example.org/body/a">Link in body</a>
 </body>
 </html>
